Return ReindexDTO instead of ReindexEntity