@@ -1,9 +1,11 @@
 package uk.gov.hmcts.ccd.definition.store.excel.service;
 
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import uk.gov.hmcts.ccd.definition.store.domain.service.EntityToResponseDTOMapper;
 import uk.gov.hmcts.ccd.definition.store.repository.ReindexRepository;
-import uk.gov.hmcts.ccd.definition.store.repository.entity.ReindexEntity;
+import uk.gov.hmcts.ccd.definition.store.repository.model.ReindexDTO;
 
 import java.util.List;
 
@@ -11,22 +13,30 @@ import java.util.List;
 public class ReindexTaskServiceImpl implements ReindexTaskService {
 
     private final ReindexRepository reindexRepository;
+    private final EntityToResponseDTOMapper mapper;
 
     @Autowired
-    public ReindexTaskServiceImpl(ReindexRepository reindexRepository) {
+    public ReindexTaskServiceImpl(ReindexRepository reindexRepository, EntityToResponseDTOMapper mapper) {
         this.reindexRepository = reindexRepository;
+        this.mapper = mapper;
     }
 
     @Override
-    public List<ReindexEntity> getAllReindexTasks() {
-        return reindexRepository.findAll();
+    public List<ReindexDTO> getAll() {
+        return reindexRepository.findAll()
+            .stream()
+            .map(mapper::map)
+            .toList();
     }
 
     @Override
-    public List<ReindexEntity> getTasksByCaseType(String caseType) {
-        if (caseType == null || caseType.isBlank()) {
-            return getAllReindexTasks();
+    public List<ReindexDTO> getTasksByCaseType(String caseType) {
+        if (StringUtils.isBlank(caseType)) {
+            return getAll();
         }
-        return reindexRepository.findByCaseType(caseType);
+        return reindexRepository.findByCaseType(caseType)
+            .stream()
+            .map(mapper::map)
+            .toList();
     }
 }
